--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -18,79 +18,61 @@
       </div>
 
       <h3>Deliver my taco masterpieces to...</h3>
-      <label for="name">Name: </label>
-      <input type="text" th:field="*{name}"/>
-<!-- end::allButValidation[] -->
+      <label for="deliveryName">deliveryName: </label>
+      <input type="text" th:field="*{deliveryName}"/>
       <span class="validationError"
-            th:if="${#fields.hasErrors('name')}"
-            th:errors="*{name}">Name Error</span>
-<!-- tag::allButValidation[] -->
+            th:if="${#fields.hasErrors('deliveryName')}"
+            th:errors="*{deliveryName}">deliveryName Error</span>
       <br/>
 
-      <label for="street">Street address: </label>
-      <input type="text" th:field="*{street}"/>
-<!-- end::allButValidation[] -->
+      <label for="deliveryStreet">deliveryStreet address: </label>
+      <input type="text" th:field="*{deliveryStreet}"/>
       <span class="validationError"
-            th:if="${#fields.hasErrors('street')}"
-            th:errors="*{street}">Street Error</span>
-<!-- tag::allButValidation[] -->
+            th:if="${#fields.hasErrors('deliveryStreet')}"
+            th:errors="*{deliveryStreet}">deliveryStreet Error</span>
       <br/>
 
-      <label for="city">City: </label>
-      <input type="text" th:field="*{city}"/>
-<!-- end::allButValidation[] -->
+      <label for="deliveryCity">deliveryCity: </label>
+      <input type="text" th:field="*{deliveryCity}"/>
       <span class="validationError"
-            th:if="${#fields.hasErrors('city')}"
-            th:errors="*{city}">City Error</span>
-<!-- tag::allButValidation[] -->
+            th:if="${#fields.hasErrors('deliveryCity')}"
+            th:errors="*{deliveryCity}">deliveryCity Error</span>
       <br/>
 
-      <label for="state">State: </label>
-      <input type="text" th:field="*{state}"/>
-<!-- end::allButValidation[] -->
+      <label for="deliveryState">deliveryState: </label>
+      <input type="text" th:field="*{deliveryState}"/>
       <span class="validationError"
-            th:if="${#fields.hasErrors('state')}"
-            th:errors="*{state}">State Error</span>
-<!-- tag::allButValidation[] -->
+            th:if="${#fields.hasErrors('deliveryState')}"
+            th:errors="*{deliveryState}">deliveryState Error</span>
       <br/>
 
-      <label for="zip">Zip code: </label>
-      <input type="text" th:field="*{zip}"/>
-<!-- end::allButValidation[] -->
+      <label for="deliveryZip">deliveryZip code: </label>
+      <input type="text" th:field="*{deliveryZip}"/>
       <span class="validationError"
-            th:if="${#fields.hasErrors('zip')}"
-            th:errors="*{zip}">Zip Error</span>
-<!-- tag::allButValidation[] -->
+            th:if="${#fields.hasErrors('deliveryZip')}"
+            th:errors="*{deliveryZip}">deliveryZip Error</span>
       <br/>
 
       <h3>Here's how I'll pay...</h3>
-<!-- tag::validatedField[] -->
       <label for="ccNumber">Credit Card #: </label>
       <input type="text" th:field="*{ccNumber}"/>
-<!-- end::allButValidation[] -->
       <span class="validationError"
             th:if="${#fields.hasErrors('ccNumber')}"
             th:errors="*{ccNumber}">CC Num Error</span>
-<!-- tag::allButValidation[] -->
-<!-- end::validatedField[] -->
       <br/>
 
       <label for="ccExpiration">Expiration: </label>
       <input type="text" th:field="*{ccExpiration}"/>
-<!-- end::allButValidation[] -->
       <span class="validationError"
             th:if="${#fields.hasErrors('ccExpiration')}"
             th:errors="*{ccExpiration}">CC Num Error</span>
-<!-- tag::allButValidation[] -->
       <br/>
 
       <label for="ccCVV">CVV: </label>
       <input type="text" th:field="*{ccCVV}"/>
-<!-- end::allButValidation[] -->
       <span class="validationError"
             th:if="${#fields.hasErrors('ccCVV')}"
             th:errors="*{ccCVV}">CC Num Error</span>
-<!-- tag::allButValidation[] -->
       <br/>
 
       <input type="submit" value="Submit order"/>
