add In-memory user store

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -58,16 +58,16 @@
 			</div>
 		</div>
 
-		<!-- <div>
+		<div>
 
 
 			<h3>Name your taco creation:</h3>
-			<input type="text" th:field="*{name}" /> <span
+			<!-- <input type="text" th:field="*{name}" /> <span
 				class="validationError" th:if="${#fields.hasErrors('name')}"
-				th:errors="*{name}">Name Error</span> <br />
+				th:errors="*{name}">Name Error</span> <br /> -->
 
 			<button>Submit your taco</button>
-		</div> -->
+		</div>
 	</form>
 </body>
 </html>
