--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <title>Taco Cloud</title>
 <link rel="stylesheet" th:href="@{/styles.css}" />
@@ -13,7 +12,7 @@
 	<form method="POST" th:object="${design}">
 
 		<!-- <span class="validationError"
-			th:if="${#fields.hasErrors('ingredients')}"
+			th:if="${#fields.hasErrors()}"
 			th:errors="*{ingredients}">Ingredient Error</span> -->
 
 		<div class="grid">
@@ -29,7 +28,8 @@
 				<h3>Pick your protein:</h3>
 				<div th:each="ingredient : ${protein}">
 					<input name="ingredients" type="checkbox"
-						th:value="${ingredient.name}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
+						th:value="${ingredient.name}" /> <span
+						th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 
@@ -37,7 +37,8 @@
 				<h3>Choose your cheese:</h3>
 				<div th:each="ingredient : ${cheese}">
 					<input name="ingredients" type="checkbox"
-						th:value="${ingredient.name}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
+						th:value="${ingredient.name}" /> <span
+						th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 
@@ -45,7 +46,8 @@
 				<h3>Determine your veggies:</h3>
 				<div th:each="ingredient : ${veggies}">
 					<input name="ingredients" type="checkbox"
-						th:value="${ingredient.name}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
+						th:value="${ingredient.name}" /> <span
+						th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 
@@ -53,7 +55,8 @@
 				<h3>Select your sauce:</h3>
 				<div th:each="ingredient : ${sauce}">
 					<input name="ingredients" type="checkbox"
-						th:value="${ingredient.name}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
+						th:value="${ingredient.name}" /> <span
+						th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 		</div>
